--- a/.github/workflows/Docker-Build.yaml
+++ b/.github/workflows/Docker-Build.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
+          platforms: linux/386,linux/amd64,linux/arm64/v8
           push: true
           tags: |
             ghcr.io/apocalypsor/jdc:latest
